--- a/public/assets/css/general.css
+++ b/public/assets/css/general.css
@@ -32,7 +32,7 @@ html{
 a {
     text-decoration: none;
     font-size: inherit !important;
-    color: inherit;
+    color: var(--color-black);
 }
 .text-xl{
     font-size: var(--font-size-l);
